refactoring + features: display help with scrolling, resize console